samples/_failures_safe/1761148991_095b31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52ddf4ac.c: In function ‘main’:
./samples/SAFE/__tmp_52ddf4ac.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_52ddf4ac.c:168:9: error: expected declaration or statement at end of input
